--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,8 @@ html {
 body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
-  line-height: 1.6; }
+  line-height: 1.6;
+  padding: 0 2rem; }
 
 .heading--1 {
   color: #0000ff;
